--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 code {
     font-family: "Fira Mono","Consolas","Monaco";
     font-size: 8pt;
+    font-weight: bold;
     color: brown;
     background: pink;
     padding: 4pt;
